fix: margin, padding, text-align

--- a/containers/Blog/Blog.scss
+++ b/containers/Blog/Blog.scss
@@ -18,14 +18,14 @@
       @apply flex flex-col md:flex-row items-center md:items-start justify-center gap-[50px] md:gap-[50px] mb-12 md:mb-24;
 
       .category {
-        @apply w-[150px] h-[212px] md:w-[300px] md:h-[424px];
+        @apply w-[150px] h-[212px] md:w-[300px] md:h-[424px] mb-4 md:mb-[initial];
 
         img {
           @apply w-[150px] h-[104.5px] md:w-[300px] md:h-[209px] mb-3 md:mb-6;
         }
 
         .categories-label {
-          @apply flex items-center justify-start gap-3 mb-3;
+          @apply flex items-center justify-center md:justify-start gap-[6px] md:gap-3 mb-3;
 
           p {
             @apply text-[10px] md:text-base first:font-bold first:text-primary last:font-normal last:text-[#777777];
@@ -33,7 +33,7 @@
         }
 
         .category-message {
-          @apply font-openSans font-normal text-xs md:text-xl md:leading-8 h-[80px] md:h-[120px];
+          @apply font-openSans font-normal text-xs md:text-xl md:leading-8 h-[80px] md:h-[120px] text-center md:text-start;
         }
 
         .categories-icon {
